# rs-simple-app

./: Cargo.toml
data/: input.json
settings/: default.toml  prod.toml  test.toml
src/: main.rs  model.rs  settings.rs  stack.rs
