[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2"
config = "0.11"
envsubst = "0.2"
flexi_logger = "0.17"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.9", features = ["json"] }
structopt = "0.3"
thiserror = "1.0"
